Fixed boxes and grid spacing

--- a/Style Guide/css/main.css
+++ b/Style Guide/css/main.css
@@ -434,8 +434,8 @@ label {
     padding: 2.7rem 1rem 2rem 1rem;
 	text-align: center;
     color: white;
-    width: 6rem;
-	height: 3rem;
+    width: 7.5rem;
+	height: 7.5rem;
 }
 
 .cBlack {
